@@ -224,7 +224,7 @@ stlm <- function(x ,s.window=7, robust=FALSE, method=c("ets","arima"),
         warning("The ETS model must be non-seasonal. I'm ignoring the seasonal component specified.")
         substr(etsmodel,3,3) <- "N"
       }
-      modelfunction <- function(x,...){return(ets(x,model=etsmodel,...))}
+      modelfunction <- function(x,...){return(ets(x,model=etsmodel,allow.multiplicative.trend=FALSE,...))}
     }
     else if(method=="arima")
       modelfunction <- function(x,...){return(auto.arima(x,xreg=xreg,seasonal=FALSE,...))}
@@ -241,7 +241,7 @@ stlm <- function(x ,s.window=7, robust=FALSE, method=c("ets","arima"),
 }
 
 forecast.stlm <- function(object, h = 2*object$m, level = c(80, 95), fan = FALSE, 
-     lambda=object$lambda, newxreg=NULL, ...)
+     lambda=object$lambda, allow.multiplicative.trend=FALSE, newxreg=NULL, ...)
 {
   if(!is.null(newxreg))
   {
@@ -256,8 +256,11 @@ forecast.stlm <- function(object, h = 2*object$m, level = c(80, 95), fan = FALSE
   lastseas <- rep(object$stl$time.series[n-(m:1)+1,"seasonal"],trunc(1+(h-1)/m))[1:h]
  
   # Forecast seasonally adjusted series
-  if(class(object$model)=="Arima" & !is.null(newxreg))
+  if(is.element("Arima",class(object$model)) & !is.null(newxreg))
     fcast <- forecast(object$model, h=h, level=level, xreg=newxreg, ...)
+  else if(is.element("ets",class(object$model)))
+    fcast <- forecast(object$model, h=h, level=level, 
+      allow.multiplicative.trend=allow.multiplicative.trend, ...)
   else
     fcast <- forecast(object$model, h=h, level=level, ...)
 
@@ -283,9 +286,7 @@ forecast.stlm <- function(object, h = 2*object$m, level = c(80, 95), fan = FALSE
   return(fcast)
 }
 
-stlf <- function(x ,h=frequency(x)*2, s.window=7, robust=FALSE, method=c("ets","arima","naive","rwdrift"), 
-  etsmodel="ZZN", forecastfunction=NULL, level = c(80, 95), fan = FALSE, lambda=NULL, 
-  xreg=NULL, newxreg=NULL, ...)
+stlf <- function(x, h=frequency(x)*2, s.window=7, robust=FALSE, lambda=NULL, ...)
 {
 	if (!is.null(lambda)) 
 	{
@@ -294,8 +295,7 @@ stlf <- function(x ,h=frequency(x)*2, s.window=7, robust=FALSE, method=c("ets","
 	}
 
 	fit <- stl(x,s.window=s.window,robust=robust)
-	fcast <- forecast(fit,h=h,method=method,etsmodel=etsmodel, forecastfunction=forecastfunction,
-    level=level,fan=fan,xreg=xreg,newxreg=newxreg,lambda=lambda, ...)
+	fcast <- forecast(fit,h=h,lambda=lambda, ...)
 
 	# if (!is.null(lambda)) 
 	# {
