@@ -8,10 +8,7 @@
 \usage{
 stlm(x, s.window=7, robust=FALSE, method=c("ets","arima"), 
      modelfunction=NULL, etsmodel="ZZN", xreg=NULL, lambda=NULL, ...)
-stlf(x, h=frequency(x)*2, s.window=7, robust=FALSE, 
-    method=c("ets","arima", "naive", "rwdrift"), etsmodel="ZZN",
-    forecastfunction=NULL,
-    level=c(80,95), fan=FALSE, lambda=NULL, xreg=NULL, newxreg=NULL, ...)
+stlf(x, h=frequency(x)*2, s.window=7, robust=FALSE, lambda=NULL, ...)
 \method{forecast}{stlm}(object, h = 2*object$m, 
 	level = c(80, 95), fan = FALSE, lambda=object$lambda, newxreg=NULL, ...)
 \method{forecast}{stl}(object, method=c("ets","arima","naive","rwdrift"), 
@@ -38,7 +35,7 @@ ignored. Otherwise \code{method} is used to specify the forecasting method to be
 \item{lambda}{Box-Cox transformation parameter. Ignored if \code{NULL}. Otherwise, data transformed before decomposition and back-transformed after forecasts are computed.}
 \item{s.window}{Either the character string ``periodic'' or the span (in lags) of the loess window for seasonal extraction.}
 \item{robust}{If \code{TRUE}, robust fitting will used in the loess procedure within \code{\link[stats]{stl}}.}
-\item{...}{Other arguments passed to either \code{modelfunction} or \code{forecastfunction}.}
+\item{...}{Other arguments passed to \code{forecast.stl}, \code{modelfunction} or \code{forecastfunction}.}
 }
 
 \description{Forecasts of STL objects are obtained by applying a non-seasonal forecasting method
