@@ -12,6 +12,8 @@ Version 5.10 (?? 2015)
   * Fixed bug in forecasts from bats which labelled them as TBATS.
   * Modified TBATS and BATS estimation to avoid occasional instabilities.
   * Added allow.multiplicative.trend argument to ets().
+  * Set allow.multiplictive.trend=FALSE in stlf(), stlm() and forecast.ts().
+  * Simplified arguments in stlf().
 
 Version 5.9 (26 February 2015)
   * Improved documentation of accuracy() function.
